Fix the overflow of code blocks

--- a/assets/scss/components/content.scss
+++ b/assets/scss/components/content.scss
@@ -52,6 +52,10 @@ body {
           margin: 0 0 2rem;
         }
 
+        .highlight {
+          overflow: scroll;
+        }
+
         .highlight,
         blockquote {
           background-color: #282828;
